--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,12 @@ export(write_data)
 export(write_scflow_manifest)
 export(write_scflow_samplesheet)
 import(Matrix)
+import(One2One)
 import(loomR)
 import(rhdf5)
 import(snow)
 import(tidyverse)
 importFrom(DropletUtils,write10xCounts)
-importFrom(One2One,ortholog_data_Mouse_Human)
 importFrom(biomaRt,getBM)
 importFrom(biomaRt,useMart)
 importFrom(ids,proquint)
