--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,3 +20,8 @@ importFrom(DropletUtils,write10xCounts)
 importFrom(biomaRt,getBM)
 importFrom(biomaRt,useMart)
 importFrom(ids,proquint)
+importFrom(matrixStats,rowVars)
+importFrom(stats,na.omit)
+importFrom(utils,data)
+importFrom(utils,read.delim)
+importFrom(utils,write.table)
